tests/errors/sem.expected-constant.insert-arg.or
main :: () -> void {
    x := "x + 1";
    @insert x;
};
